:white_check_mark: update BookSourceQualityTest.java